--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,29 @@
     "# Multi-stage / repeated games\n",
     "---\n",
     "\n",
+    "When multiple game are played one after the other by the same players, the situation gets more interesting.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Types of games\n",
+    "\n",
+    "**Multi-stage** games are games made of independent **stage games** where each player gets to remember the outcomes (what was played and the payoffs) of the previous stage games. **Repeated** games are multi-stage games where the same stage game is repeated multiple times. **Infinite** games are games in which neither parties knows exactly when it will stop: for each stage game, there is a chance $0 \\le \\delta < 1$ that it will be followed by another stage game.\n",
+    "\n",
+    "* finite series of game of one or several kinds\n",
+    "* infinite series of game (typically of the same kind)\n",
+    "* discounting the rewards (corresponds to uncertainty about playing some more for infinite games)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Types of solutions\n",
+    "\n",
     "* one-stage un-improvable\n",
+    "* should always finish by a nash equilibrium, but can bargain with it\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Bargaining\n",
+    "\n",
     "* accountability\n",
     "* should always finish by a nash equilibrium, but can bargain with it\n",
     "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor), cannot be used for prisoner's dilema (fixed number of games)\n",
