--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -444,7 +444,7 @@
     "\n",
     "![title](img/mutual_destruction_2.svg)\n",
     "\n",
-    "The second Nash equilibrium is mutual retreat. If the player 1 believes that this will be the outcome of the last game, he should ignore the threat and let the player 2 put the missiles on Cuba."
+    "The second Nash equilibrium is mutual retreat. If the player 1 believes that this will be the outcome of the last game, he should ignore the threat and let the player 2 put the missiles on Cuba. **The two belief leads to two different outcomes**."
    ]
   },
   {
@@ -464,26 +464,135 @@
     "\n",
     "**Multi-stage** games are games made of independent **stage games** where each player gets to remember the outcomes (what was played and the payoffs) of the previous stage games. **Repeated** games are multi-stage games where the same stage game is repeated multiple times. **Infinite** games are games in which neither parties knows exactly when it will stop: for each stage game, there is a chance $0 \\le \\delta < 1$ that it will be followed by another stage game.\n",
     "\n",
-    "* finite series of game of one or several kinds\n",
-    "* infinite series of game (typically of the same kind)\n",
-    "* discounting the rewards (corresponds to uncertainty about playing some more for infinite games)\n",
+    "The goal for these games is to maximize the **net present value** of the stream of payoffs:\n",
+    "\n",
+    "&emsp; $\\displaystyle NPV = \\sum_k \\delta^k v_k$\n",
+    "&emsp; where $\\delta$ is the discounting factor and $v_k$ is the payoff at stage *k*\n",
+    "\n",
+    "For finite games, the discounting factor can be equal to 1. For infinite games it must be lower than 1 for the series to converge, and it essentially corresponds to the expected value of the payoff where $\\delta$ is the probability to continue.\n",
     "\n",
     "<br>\n",
     "\n",
-    "### Types of solutions\n",
+    "### One-stage unimprovable\n",
     "\n",
-    "* one-stage un-improvable\n",
-    "* should always finish by a nash equilibrium, but can bargain with it\n",
+    "Because each stage game can be seen as a sub-game in an extended form, we use the same concept of **sub game perfect equilibria** presented before. One such trivial sub-game perfect equilibria for the repeated game is to play a Nash equilibrium at each stage game (treated each game independently).\n",
+    "\n",
+    "To identify other equilibrium, we use the **one-stage deviation principle**: if no player is able to modify its sequence of play at one stage such that its overall strategy is improved, then the strategy is a sub-game perfect equilibrium.\n",
+    "\n",
+    "> **Proof**: if the sequence of play $s_1 \\dots s_N$ is improvable, let $s_1 \\dots s_k$ be the longest path made of improvable stage-game strategy (all stage-games later are not improvable). If we consider the rest of the sequence $s_k \\dots s_N$, this sequence is such that only the stage-game *k* is improvable. Thus, if not stage-game is improvable, the whole sequence is not improvable either.\n",
+    "\n",
+    "In particular, this principle imposes that **we should always play by a nash equilibrium at the last stage game**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Finite multi-stage games solutions\n",
+    "\n",
+    "For the last stage game, we know we must play a Nash equilibrium. But if there are two Nash equilibriums at the end, with different payoffs, we can use these to *bargain* a strategy made of stage-game strategies that are not Nash equilibrium. We play the best Nash equilibrium in case of cooperation, and reverse to the worse Nash equilibrium otherwise:\n",
+    "\n",
+    "* the *carrot* is the Nash equilibrium with the highest payoff\n",
+    "* the *stick* is the Nash equilibrium with the lowest payoff\n",
+    "\n",
+    "For this to work, the **discounting factor must be high enough to have a strong incentive to cooperate**. This discounting factor is a measure of the **accountability / reputation** of each player and forces them to play nice.\n",
     "\n",
     "<br>\n",
     "\n",
-    "### Bargaining\n",
+    "### Example\n",
     "\n",
-    "* accountability\n",
-    "* should always finish by a nash equilibrium, but can bargain with it\n",
-    "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor), cannot be used for prisoner's dilema (fixed number of games)\n",
+    "Two Prisonner's dilema followed by a game with 2 nash equilibrium:\n",
+    "\n",
+    "<div style=\"width:80%\">\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <div style=\"text-align:center\">Prisonner's dilema</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>D</th>\n",
+    "            <th>S</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td>-4/-4</td>\n",
+    "            <td>0/-5</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>S</th>\n",
+    "            <td>-5/0</td>\n",
+    "            <td>-1/-1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <div style=\"text-align:center\">Prisonner's dilema</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>D</th>\n",
+    "            <th>S</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td>-4/-4</td>\n",
+    "            <td>0/-5</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>S</th>\n",
+    "            <td>-5/0</td>\n",
+    "            <td>-1/-1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:right;\">\n",
+    "        <div style=\"text-align:center\">Two nash game</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>A</th>\n",
+    "            <th>B</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>A</th>\n",
+    "            <td>4/4</td>\n",
+    "            <td>0/0</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>B</th>\n",
+    "            <td>0/0</td>\n",
+    "            <td>1/1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "A sub-game perfect Nash equilibrium could be that both player stay silent for the two prisonners dilema, then play the 4/4 Nash equilibrium. If one of them defects, they denouce the other player and play the 1/1 Nash equilibrium. We can check if there are any possible positive deviations from this:\n",
+    "\n",
+    "* For the first prisonner's dilema, treason would benefit 1 but cost $3 \\, (\\delta + \\delta^2)$\n",
+    "* For the second prisonner's dilema, treason would benefit 1 but cost $3 \\, \\delta$\n",
+    "* Playing 4/4 in case of treason would bring the whole deal down and cost $3 \\, (1 + \\delta)$ for a benefit of $3 \\, \\delta^2$\n",
+    "\n",
+    "So if $\\delta \\ge \\frac{1}{3}$, there is no one-deviation that leads to a better result so this is a sub-game perfect equilibrium. Note that this would not work for a fixed number of prisonner's dilema in a row for there is but one Nash equilibrium at the end."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Infinite repeated games solutions\n",
+    "---\n",
+    "\n",
     "* if the game is infinite (propability to continue) it creates another equilibrium that can be used to bargain, even in the case of prisoner's dilema\n",
     "* grim-trigger notion\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Fold Theorem\n",
+    "\n",
     "* folk theorem"
    ]
   },
@@ -499,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +617,7 @@
        "'img/mutual_destruction.svg'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +673,7 @@
        "'img/mutual_destruction_2.svg'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +689,7 @@
     "dot.node('y1', '2', shape='circle', **node_attr)\n",
     "dot.node('y2', '0/0', shape='rectangle', **node_attr)\n",
     "dot.node('x3', '10/-10', shape='rectangle', **node_attr)\n",
-    "dot.node('x4', '-100/100', shape='rectangle', **node_attr)\n",
+    "dot.node('x4', '-100/-100', shape='rectangle', **node_attr)\n",
     "\n",
     "dot.edge('x0', 'y1', xlabel='escalate', **arr_attr)\n",
     "dot.edge('x0', 'y2', label='ignore', **arr_attr)\n",
