--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -499,11 +499,7 @@
     "\n",
     "For this to work, the **discounting factor must be high enough to have a strong incentive to cooperate**. This discounting factor is a measure of the **accountability / reputation** of each player and forces them to play nice.\n",
     "\n",
-    "<br>\n",
-    "\n",
-    "### Example\n",
-    "\n",
-    "Two Prisonner's dilema followed by a game with 2 nash equilibrium:\n",
+    "Here is one example for two Prisonner's dilema stage-games followed by a game with 2 nash equilibrium:\n",
     "\n",
     "<div style=\"width:80%\">\n",
     "    <div style=\"width:33%;float:left;\">\n",
@@ -583,11 +579,19 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Infinite repeated games solutions\n",
-    "---\n",
+    "### Infinite repeated games solutions\n",
     "\n",
-    "* if the game is infinite (propability to continue) it creates another equilibrium that can be used to bargain, even in the case of prisoner's dilema\n",
-    "* grim-trigger notion\n",
+    "If a game is infinite, it creates a kind of artificial additional equilibrium that can be used to bargain, even in case of stage-game with a single Nash equilibrium. This additional equilibrium is often based on the concept of **grim-trigger**: at first defection, go back to the non-cooperative game forever.\n",
+    "\n",
+    "For instance, in an infinite prisonner's dilema, each player could play silent but go back to denounce at the first defection. The infinite payoff in case of cooperation would be better than defecting at any point $N$:\n",
+    "\n",
+    "&emsp; $\\displaystyle v_N(S) = \\sum_{k=N}^{\\infty} \\delta^k (-1) = \\frac{-\\delta^N}{1 - \\delta}$\n",
+    "&emsp; versus\n",
+    "&emsp; $\\displaystyle v_N(D) = \\sum_{k=N+1}^{\\infty} \\delta^k (-4) = \\frac{-4 \\delta^{N+1}}{1 - \\delta}$\n",
+    "\n",
+    "&emsp; $\\displaystyle v_N(D) \\ge v_N(S) \\implies -4 \\delta^{N+1} \\ge -\\delta^N \\implies 4 \\delta \\le 1 \\implies \\delta \\le \\frac{1}{4}$\n",
+    "\n",
+    "So if the chance of the two players to meet again is higher than 25%, then they should cooperate.\n",
     "\n",
     "<br>\n",
     "\n",
