--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -365,12 +365,6 @@
     "\n",
     "For each sub-game, we replace the sub-game by the expected pay-off of the Nash equilibrum at the upper level (the surrounding sub-game) and bubble up this information until we reach the top. One interesting thing about perfect information game is that there is always one such equilibrium, and there is exactly one if none of the payoffs at the leaves are equal.\n",
     "\n",
-    "This process does not work quite the same for imperfect information games because we cannot solve each game separatly, and the assumption that we can replace a sub-game by a single payoff is not valid anymore.\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "### Zero sum game and minimax\n",
-    "\n",
     "For zero sum games (or fixed sum payoff games), the backward induction shown below is totally equivalent to the **minimax algorithm**. Techniques such as alpha-beta pruning can be used to solve these games efficiently, and cut-offs and heuristics can be used to handle game trees that are too deep.\n",
     "\n",
     "For games with non-fixed payoff sum, we actually need to bubble up the payoff of both players, and each player is only interested in maximizing his own payoff.\n",
@@ -379,12 +373,16 @@
     "\n",
     "### Pareto optimum, knowledge and order of play\n",
     "\n",
-    "The order of play does not change the fact that Nash equilibrium do not necessarily correspond to the **pareto optimum**. For instance, in the prisonner's dilema, the outcome is not changed. The game might however becomes much less interesting for games such as:\n",
+    "The order of play does not change the fact that Nash equilibrium do not necessarily correspond to the **pareto optimum**. For instance, in the Centipede game below, the players will never reach 3/3 and stop at 1/1 or 1/2:\n",
     "\n",
-    "* Matching pennies: for which the second player will always win\n",
-    "* Battle of sexes: for which the first player will always get his/her preferred outcome\n",
+    "![title](img/centipede_game.svg)\n",
     "\n",
-    "The main change with sequential games is that the **belief of the other's strategy becomes a knowledge**. Player 2 knows the previous move of player 1, and player 1 can more easily understand what player 2 will do after its move as well. As a result, the equilibriums will likely change.\n",
+    "The sequencing of move can also unbalance some games to the point of making them much less interesting:\n",
+    "\n",
+    "* Matching pennies: the second player will always win\n",
+    "* Battle of sexes: the first player will always get his/her preferred outcome\n",
+    "\n",
+    "The main change with sequential games is that the **belief of the other's strategy becomes a knowledge**. Player 2 knows the previous move of player 1, and player 1 can more easily understand what player 2 will do after its move as well.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -420,7 +418,8 @@
     "\n",
     "![title](img/mutual_destruction.svg)\n",
     "\n",
-    "To follow the logic of backward induction and sub-game perfect equilibriums, we must start from the end of the extended form and solve the following normal form game:\n",
+    "\n",
+    "This process of backward induction does not work quite the same as for perfect information games, minimax for instance is not applicable, as we need some kind of belief on what the opponent would do when moves are simultaneous. Once the belief is fixed, we can follow the backward induction process by starting from the end of the extended form:\n",
     "\n",
     "<table style=\"text-align:center;width:250px;margin-left:100px;margin-right:100px\">\n",
     "  <tr>\n",
@@ -718,7 +717,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'img/centipede_game.svg'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_attr = dict(fontsize='10', height='0.1')\n",
+    "arr_attr = dict(fontsize='10', arrowsize='0.6')\n",
+    "\n",
+    "dot = Digraph(comment='Centipede game')\n",
+    "dot.attr(pad='0.1', ranksep='0.3', nodesep='0.6', imagescale='200')\n",
+    "\n",
+    "dot.node('x0', '1', shape='circle', **node_attr)\n",
+    "dot.node('x1', '2', shape='circle', **node_attr)\n",
+    "dot.node('x2', '1', shape='circle', **node_attr)\n",
+    "dot.node('x3', '2', shape='circle', **node_attr)\n",
+    "\n",
+    "dot.node('y0', '1/1', shape='rectangle', **node_attr)\n",
+    "dot.node('y1', '1/2', shape='rectangle', **node_attr)\n",
+    "dot.node('y2', '3/1', shape='rectangle', **node_attr)\n",
+    "dot.node('y3', '1/4', shape='rectangle', **node_attr)\n",
+    "dot.node('y4', '3/3', shape='rectangle', **node_attr)\n",
+    "\n",
+    "dot.edge('x0', 'y0', **arr_attr)\n",
+    "dot.edge('x1', 'y1', **arr_attr)\n",
+    "dot.edge('x2', 'y2', **arr_attr)\n",
+    "dot.edge('x3', 'y3', **arr_attr)\n",
+    "dot.edge('x3', 'y4', constraint='false', **arr_attr)\n",
+    "\n",
+    "dot.edge('x0', 'x1', constraint='false', **arr_attr)\n",
+    "dot.edge('x1', 'x2', constraint='false', **arr_attr)\n",
+    "dot.edge('x2', 'x3', constraint='false', **arr_attr)\n",
+    "\n",
+    "dot.format='svg'\n",
+    "dot.render('img/centipede_game', view=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
