basic game theory

--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -355,9 +355,17 @@
     "\n",
     "A **pure strategy** still consists in a function that maps each information set (each position, each configuration in the game tree) to an action, while a **behavioral strategy** maps each information set to a probability distributions on the possible moves.\n",
     "\n",
-    "A sub-game perfect Nash equilibrium is a pair of strategies such that both players have no benefits in deviating form this strategy **at any information set**. This is different from a Nash equilibrium for which both players would have no benefits in deviating from the strategy on the **equilibrium path** (the path that leads to the outcome).\n",
+    "A **sub-game perfect equilibrium** is a pair of strategies such that both players have no benefits in deviating form this strategy **at any information set**, while a Nash equilibrium would be a pair of strategy for which both players have no benefits in deviating from the strategy on the **equilibrium path**.\n",
     "\n",
-    "<br>\n",
+    "<div style=\"width:50%;float:left;\">\n",
+    "    <img src=\"img/market_entry_game.svg\"/>\n",
+    "</div>\n",
+    "\n",
+    "In the game of market entry shown here for instance, the only sub-game perfect equilibria is for player 1 to enter the market and player 2 to accept it, leading to the outcome of 1/1. But another valid Nash equilibrium would be for player 2 to always fight, and therefore for player 1 to stay outside of the market.\n",
+    "\n",
+    "Therefore, **a sub-game perfect equilibrium is always a Nash equilibrium but the converse is not true**.\n",
+    "\n",
+    "<br clear=\"left\">\n",
     "\n",
     "### Backward induction\n",
     "\n",
@@ -713,6 +721,44 @@
     "\n",
     "dot.format='svg'\n",
     "dot.render('img/mutual_destruction_2', view=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'img/market_entry_game.svg'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_attr = dict(fontsize='10', height='0.1')\n",
+    "arr_attr = dict(fontsize='10', arrowsize='0.6')\n",
+    "\n",
+    "dot = Digraph(comment='Market entry game')\n",
+    "dot.attr(pad='0.1', ranksep='0.3', nodesep='0.6', imagescale='200')\n",
+    "\n",
+    "dot.node('x0', '1', shape='circle', **node_attr)\n",
+    "dot.node('x1', '2', shape='circle', **node_attr)\n",
+    "dot.node('y0', '0/2', shape='rectangle', **node_attr)\n",
+    "dot.node('y1', '-1/-1', shape='rectangle', **node_attr)\n",
+    "dot.node('y2', '1/1', shape='rectangle', **node_attr)\n",
+    "\n",
+    "dot.edge('x0', 'y0', label='Out', **arr_attr)\n",
+    "dot.edge('x0', 'x1', xlabel='Enter', **arr_attr)\n",
+    "dot.edge('x1', 'y1', label='Fight', **arr_attr)\n",
+    "dot.edge('x1', 'y2', xlabel='Accept', **arr_attr)\n",
+    "\n",
+    "dot.format='svg'\n",
+    "dot.render('img/market_entry_game', view=True)"
    ]
   },
   {
