--- a/ml/0_basic_game_theory_1.ipynb
+++ b/ml/0_basic_game_theory_1.ipynb
@@ -361,17 +361,21 @@
     "    <img src=\"img/market_entry_game.svg\"/>\n",
     "</div>\n",
     "\n",
-    "In the game of market entry shown here for instance, the only sub-game perfect equilibria is for player 1 to enter the market and player 2 to accept it, leading to the outcome of 1/1. But another valid Nash equilibrium would be for player 2 to always fight, and therefore for player 1 to stay outside of the market.\n",
+    "In the game of market entry shown here for instance, the only sub-game perfect equilibria is for player 1 to enter the market and player 2 to accept it, leading to the outcome of 1/1. \n",
+    "\n",
+    "But another valid Nash equilibrium would be for player 2 to always fight, and therefore for player 1 to stay outside of the market.\n",
     "\n",
     "Therefore, **a sub-game perfect equilibrium is always a Nash equilibrium but the converse is not true**.\n",
+    "\n",
+    "One interesting thing about perfect information game is that there is always at least one sub-game perfect equilibrium, and there is exactly one if none of the payoffs at the leaves are equal.\n",
     "\n",
     "<br clear=\"left\">\n",
     "\n",
     "### Backward induction\n",
     "\n",
-    "The general idea to find such sub-game perfect Nash equilibrium for such games is that we can handle each sub-game separately by estimating the gain of the sub-games from the smallest to the biggest, in a process called as **backward induction** (or dynamic programming from programming perspective).\n",
+    "The general idea to find such sub-game perfect Nash equilibrium is to handle each sub-game separately by estimating the gain of the sub-games from the bottom-up, in a process called as **backward induction** (or dynamic programming from programming perspective).\n",
     "\n",
-    "For each sub-game, we replace the sub-game by the expected pay-off of the Nash equilibrum at the upper level (the surrounding sub-game) and bubble up this information until we reach the top. One interesting thing about perfect information game is that there is always one such equilibrium, and there is exactly one if none of the payoffs at the leaves are equal.\n",
+    "For each sub-game, we replace the sub-game by the expected pay-off of the Nash equilibrum at the upper level (the surrounding sub-game) and bubble up this information until we reach the top.\n",
     "\n",
     "For zero sum games (or fixed sum payoff games), the backward induction shown below is totally equivalent to the **minimax algorithm**. Techniques such as alpha-beta pruning can be used to solve these games efficiently, and cut-offs and heuristics can be used to handle game trees that are too deep.\n",
     "\n",
