--- a/ml/0_basic_game_theory_2.ipynb
+++ b/ml/0_basic_game_theory_2.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -230,13 +231,8 @@
     "        <td>-2p+5(1-p) / -2p+5(1-p)</td>\n",
     "      </tr>\n",
     "    </table>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "If we fix p = 0.5, we get the following matrix:\n",
     "\n",
     "<div style=\"width:100%\">\n",
@@ -280,6 +276,74 @@
     "</div>\n",
     "\n",
     "We therefore see that the two Nash equilibrium are BF/FF and FF/BF, while there is another mixed Nash equilibrium mixing between the BF and FF strategy on both sides."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Example: Continuous game of chicken\n",
+    "\n",
+    "Instead of being strong or weak, each player now has a strength parameter $\\theta_i \\sim U(1, 2)$. We also modify the payoff to be 0/0 except when there is a fight:\n",
+    "\n",
+    "<table style=\"text-align:center;width:350px;margin-left:auto;margin-right:auto\">\n",
+    "  <tr>\n",
+    "    <th style=\"width: 15%\"></th>\n",
+    "    <th style=\"width: 35%\">B</th>\n",
+    "    <th style=\"width: 50%\">F</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>B</th>\n",
+    "    <td>0/0</td>\n",
+    "    <td>0/0</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>F</th>\n",
+    "    <td>0/0</td>\n",
+    "    <td>$1-\\frac{\\theta_2}{\\theta_1}$  /  $1-\\frac{\\theta_1}{\\theta_2}$</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "* In the extreme case, if a player is twice as strong as the other, its payoff is 0.5\n",
+    "* In the opposite case, if a player is half as strong as the other, its payoff is -1\n",
+    "\n",
+    "As a starter, we can compute the average payoff for the player 1 given its strength, against an opponent that is always willing to fight:\n",
+    "\n",
+    "&emsp; $\\displaystyle v_1(F, \\theta_1) = \\mathbb{E}\\big[1-\\frac{\\theta_2}{\\theta_1}\\big] = 1 - \\frac{1}{\\theta_1} \\int_1^2 \\theta_2 d\\theta_2 = 1 - \\frac{1.5}{\\theta_1}$\n",
+    "\n",
+    "&emsp; $v_1(F, \\theta_1) \\ge 0 \\iff \\theta_1 \\ge 1.5$\n",
+    "\n",
+    "Above the threshold of strength 1.5, **F** is strictly dominant over **B**, so the player should always choose to fight. But the situation is symetric, and the opponent will not always want to fight. We note **T** the common threshold at which a player is ready to fight and compute the average payoff of fighting:\n",
+    "\n",
+    "&emsp; $\\displaystyle v_1(F, \\theta_1) = 1 - \\frac{1}{\\theta_1} \\int_T^2 \\theta_2 d\\theta_2 = 1 - \\frac{2}{\\theta_1} + \\frac{T^2}{2 \\theta_1}$\n",
+    "\n",
+    "&emsp; $\\displaystyle v_1(F, \\theta_1) \\ge 0 \\iff \\theta_1 \\ge 2 - \\frac{T^2}{2} \\iff T = 2 - \\frac{T^2}{2} \\iff T^2 + 2 T = 4$\n",
+    "\n",
+    "&emsp; $T^2 + 2 T = 4 \\implies (T+1)^2 = 5 \\implies T = \\sqrt{5} - 1 \\simeq 1.23$\n",
+    "\n",
+    "And so we conclude that players should always fight if $\\theta \\ge 1.23$. In case we re-establish the positive payoffs in case of the other backing down like below:\n",
+    "\n",
+    "<table style=\"text-align:center;width:350px;margin-left:auto;margin-right:auto\">\n",
+    "  <tr>\n",
+    "    <th style=\"width: 15%\"></th>\n",
+    "    <th style=\"width: 35%\">B</th>\n",
+    "    <th style=\"width: 50%\">F</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>B</th>\n",
+    "    <td>0/0</td>\n",
+    "    <td>0/1</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>F</th>\n",
+    "    <td>1/0</td>\n",
+    "    <td>$1-\\frac{\\theta_2}{\\theta_1}$  /  $1-\\frac{\\theta_1}{\\theta_2}$</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "The result would also have to take into account for the other to back down below the threshold, that is with probability T-1, and the probability of fighting back 2-T."
    ]
   },
   {
